<resources>
    <string name="app_name">Covid_Tracker</string>

    <!-- Location info layout -->
    <string name="location_init_text">---</string>

    <!-- Total data layout -->
    <string name="total_data_header_label">Total</string>
    <string name="total_data_recovered_label">Total recovered</string>
    <string name="total_data_deaths_label">Total deaths</string>
    <string name="total_data_cases_label">Total cases</string>
    <string name="total_data_tests_label">Total tests made</string>
    <string name="total_data_init_text">---</string>

    <!-- Today data layout -->
    <string name="today_data_header_label">Today</string>
    <string name="today_data_recovered_label">Today recovered</string>
    <string name="today_data_deaths_label">Today deaths</string>
    <string name="today_data_cases_label">Today cases</string>
    <string name="today_data_init_text">---</string>

    <!-- Country Item layout -->
    <string name="country_item_name_init_text">---</string>

    <!-- Add country layout -->
    <string name="add_country_label_text">Enter country name</string>
    <string name="add_country_add_btn_text">Add</string>
    <string name="add_country_country_input_hint">E.g. Poland</string>
    <string name="add_country_loading_text">Saving…</string>
    <string name="add_country_cannot_save_country">Cannot save country</string>
    <string name="add_country_saved_country">Country saved</string>

    <!-- Add country fragment -->
    <string name="add_country_fragment_cannot_add_country">Cannot add this country</string>

    <!-- Countries list fragment -->
    <string name="country_list_fragment_fetch_error">Cannot fetch data</string>
    <string name="country_list_fragment_fetch_success">Data fetch</string>
    <string name="country_list_fragment_delete_error">Cannot delete country</string>
    <string name="country_list_fragment_delete_success">Country deleted</string>

    <!-- Country details fragment -->
    <string name="country_details_fragment_data_fetch_error">Cannot fetch data</string>
    <string name="country_details_fragment_data_fetch_success">Data fetched</string>
    <string name="country_details_fragment_error_label">Error</string>

    <!-- Current country fragment -->
    <string name="current_country_fragment_covid_data_fetch_error">Cannot fetch Covid19 data</string>
    <string name="current_country_fragment_covid_data_fetch_success">Covid19 data fetched</string>
    <string name="current_country_fragment_name_fetch_error">Cannot fetch country name</string>
    <string name="current_country_fragment_name_fetch_success">Country name fetched</string>
    <string name="current_country_fragment_exception_appeared">Exception appeared</string>

    <!-- Dialog titles and messages -->
    <string name="dialog_title_error">Error</string>
    <string name="dialog_message_cannot_add_country">Cannot add this country</string>
    <string name="dialog_message_cannot_get_country_name">Cannot define country name</string>
    <string name="dialog_message_cannot_fetch_data">Cannot fetch data</string>
    <string name="dialog_message_cannot_delete_country">Cannot delete country</string>
    <string name="dialog_message_exception_message">Unknown exception appeared</string>
    <string name="dialog_ok_button_text">OK</string>

</resources>